--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My first Github repo</title>
 </head>
 <body>
+    <h2>I can push to git!!!</h2>
+    <h3>Mama ekhn ami code pari!!!</h3>
     
 </body>
 </html>
