--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h2>I can push to git!!!</h2>
     <h3>Mama ekhn ami code pari!!!</h3>
-    
+    <img src="images/fbdp 100720.jpg" alt="">
 </body>
 </html>
